# Raspberry-Pi-test-code

./: README.md
Project-5/: README.md
Project-5/V2.10/: HIH4020-humidityMeasurement.c  HIH4020-humidityMeasurement.uf2
Project-8/: CMakeLists.txt  Readme.md  TSL25911-ambient-light-measurement.c  lookupTable.h
Project11/: Readme.md
Project11/V0.29/: thermal-imaging.c
Project11/V0.48/: thermal-imaging.c
